--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
+    "expo-local-authentication": "~11.1.1",
     "expo-status-bar": "~1.0.4",
-    "lodash.debounce": "^4.0.8",
+    "ramda": "^0.27.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
